# lg600r

./: .gitignore  30-logitech-g600.rules  Cargo.toml  LICENSE.md  README.md  build.rs  lg600r.example.toml
src/: keyboard_watcher.rs  linux-input.h  main.rs
src/config/: mod.rs
src/linput/: mod.rs
src/xdo/: managed.rs  mod.rs
