[package]
name = "lg600r"
version = "0.1.0"
authors = ["Zoey <Dessix@Dessix.net>"]

[dependencies]
dirs = "^2.0.1"
maplit = "^1.0.1"
toml = "^0.5.1"
xdg = "^2"
serde = "^1.0.94"
serde_derive = "^1.0.94"
libc = "~0.2.58"

[build-dependencies]
bindgen = "^0.49.3"

[features]
default = []

idebuild = []
