[package]
name = "lg600r"
version = "0.1.0"
authors = ["Zoey <Dessix@Dessix.net>"]
edition = "2018"

[dependencies]
dirs = "^2.0.2"
maplit = "^1.0.2"
toml = "^0.5.3"
xdg = "^2.2"
serde = "^1.0.101"
serde_derive = "^1.0.101"
serde_json = "^1.0.41"
serde-value = "^0.6.0"
libc = "^0.2.62"

[build-dependencies]
bindgen = "~0.51.1"

[features]
default = []

idebuild = []
